--- a/.gitignore
+++ b/.gitignore
@@ -23,12 +23,12 @@ composer.lock
 .phpunit.result.cache
 
 # built client resources
-src/*/Zed/*/Static/Public
-src/*/Zed/*/Static/Assets/sprite
+src/*/Glue/*/Static/Public
+src/*/Glue/*/Static/Assets/sprite
 
 # Propel classes
-src/*/Zed/*/Persistence/Propel/Base/*
-src/*/Zed/*/Persistence/Propel/Map/*
+src/*/Glue/*/Persistence/Propel/Base/*
+src/*/Glue/*/Persistence/Propel/Map/*
 
 # tests
 tests/**/_generated/
