--- a/tests/SprykerTest/Glue/GlueJsonApiConvention/codeception.yml
+++ b/tests/SprykerTest/Glue/GlueJsonApiConvention/codeception.yml
@@ -3,7 +3,7 @@ paths:
     tests: .
     data: ../../../_data
     support: _support
-    log: ../../../_output
+    output: ../../../_output
 
 coverage:
     enabled: true
@@ -13,7 +13,7 @@ coverage:
 suites:
     Communication:
         path: /
-        class_name: GlueJsonApiConventionTester
+        actor: GlueJsonApiConventionTester
         modules:
             enabled:
                 - Asserts
